--- a/02_vanilla_policy_gradients.ipynb
+++ b/02_vanilla_policy_gradients.ipynb
@@ -83,8 +83,9 @@
     "n_observations = len(state)\n",
     "\n",
     "# --- Actions ---\n",
-    "assert hasattr(env.action_space, \"shape\") and len(env.action_space.shape) == 1, \\\n",
+    "assert hasattr(env.action_space, \"shape\") and len(env.action_space.shape) == 1, (\n",
     "    \"This script expects a 1D continuous action space.\"\n",
+    ")\n",
     "n_actions = env.action_space.shape[0]\n",
     "\n",
     "print(f\"\\nEnvironment: LunarLanderContinuous-v3\")\n",
@@ -234,7 +235,9 @@
     "\n",
     "    def forward(self, x: torch.Tensor) -> tuple[torch.Tensor, torch.Tensor]:\n",
     "        mu = self.mu_net(x)\n",
-    "        log_std = torch.clamp(self.log_std, self.log_std_bounds[0], self.log_std_bounds[1])\n",
+    "        log_std = torch.clamp(\n",
+    "            self.log_std, self.log_std_bounds[0], self.log_std_bounds[1]\n",
+    "        )\n",
     "        return mu, log_std\n",
     "\n",
     "    @staticmethod\n",
@@ -358,7 +361,9 @@
     "        torch.set_grad_enabled(False)\n",
     "\n",
     "        # Baseline value (no grad here, we store float)\n",
-    "        v = value_net(torch.as_tensor(obs, dtype=torch.float32, device=device).unsqueeze(0)).item()\n",
+    "        v = value_net(\n",
+    "            torch.as_tensor(obs, dtype=torch.float32, device=device).unsqueeze(0)\n",
+    "        ).item()\n",
     "\n",
     "        next_obs, reward, terminated, truncated, _ = env.step(action_np)\n",
     "        done = bool(terminated or truncated)\n",
@@ -440,7 +445,11 @@
    ],
    "source": [
     "device = torch.device(\n",
-    "    \"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
+    "    \"cuda\"\n",
+    "    if torch.cuda.is_available()\n",
+    "    else \"mps\"\n",
+    "    if torch.backends.mps.is_available()\n",
+    "    else \"cpu\"\n",
     ")\n",
     "print(\"Using device: \", device)"
    ]
@@ -497,7 +506,9 @@
     "    policy_optimizer: optim.AdamW,\n",
     "    value_optimizer: optim.AdamW,\n",
     "    log_every: int = 10,\n",
-    ") -> tuple[GaussianPolicy, ValueNetwork, list[float], list[int], list[float], list[float]]:\n",
+    ") -> tuple[\n",
+    "    GaussianPolicy, ValueNetwork, list[float], list[int], list[float], list[float]\n",
+    "]:\n",
     "    episode_rewards: list[float] = []\n",
     "    episode_lengths: list[int] = []\n",
     "    policy_losses: list[float] = []\n",
@@ -536,7 +547,9 @@
     "            pass\n",
     "        policy_loss.backward()\n",
     "        if training_config.grad_clip_norm is not None:\n",
-    "            nn.utils.clip_grad_norm_(policy.parameters(), max_norm=training_config.grad_clip_norm)\n",
+    "            nn.utils.clip_grad_norm_(\n",
+    "                policy.parameters(), max_norm=training_config.grad_clip_norm\n",
+    "            )\n",
     "\n",
     "        policy_optimizer.step()\n",
     "\n",
@@ -544,7 +557,9 @@
     "        value_optimizer.zero_grad(set_to_none=True)\n",
     "        states_t = torch.as_tensor(np.asarray(states, dtype=np.float32), device=device)\n",
     "        value_preds = value_net(states_t)  # (T,)\n",
-    "        value_loss = value_criterion(value_preds, returns_t)  # MSE to Monte Carlo returns\n",
+    "        value_loss = value_criterion(\n",
+    "            value_preds, returns_t\n",
+    "        )  # MSE to Monte Carlo returns\n",
     "        value_loss.backward()\n",
     "        if training_config.grad_clip_norm is not None:\n",
     "            nn.utils.clip_grad_norm_(\n",
@@ -561,7 +576,9 @@
     "\n",
     "        if (ep + 1) % log_every == 0 or ep == 0:\n",
     "            avg_r = (\n",
-    "                float(np.mean(episode_rewards[-25:])) if len(episode_rewards) >= 1 else ep_return\n",
+    "                float(np.mean(episode_rewards[-25:]))\n",
+    "                if len(episode_rewards) >= 1\n",
+    "                else ep_return\n",
     "            )\n",
     "            print(\n",
     "                f\"[Episode {ep + 1:4d}] len={episode_lengths[-1]:4d}  \"\n",
@@ -569,7 +586,14 @@
     "                f\"π_loss={policy_losses[-1]:.3f}  V_loss={value_losses[-1]:.3f}\"\n",
     "            )\n",
     "\n",
-    "    return policy, value_net, episode_rewards, episode_lengths, policy_losses, value_losses"
+    "    return (\n",
+    "        policy,\n",
+    "        value_net,\n",
+    "        episode_rewards,\n",
+    "        episode_lengths,\n",
+    "        policy_losses,\n",
+    "        value_losses,\n",
+    "    )"
    ]
   },
   {
@@ -656,8 +680,12 @@
    "source": [
     "# Optimizer\n",
     "\n",
-    "policy_optimizer = optim.AdamW(policy.parameters(), lr=training_config.lr_policy, amsgrad=True)\n",
-    "value_optimizer = optim.AdamW(value_net.parameters(), lr=training_config.lr_value, amsgrad=True)"
+    "policy_optimizer = optim.AdamW(\n",
+    "    policy.parameters(), lr=training_config.lr_policy, amsgrad=True\n",
+    ")\n",
+    "value_optimizer = optim.AdamW(\n",
+    "    value_net.parameters(), lr=training_config.lr_value, amsgrad=True\n",
+    ")"
    ]
   },
   {
@@ -845,7 +873,9 @@
     "\n",
     "# Save Network to Disk\n",
     "# We will save target_q network as that is what we were training indirectly\n",
-    "save_model_pytorch(policy_net, \"trained_networks_lunar_lander/deep_q_network_lunar_lander\")\n",
+    "save_model_pytorch(\n",
+    "    policy_net, \"trained_networks_lunar_lander/deep_q_network_lunar_lander\"\n",
+    ")\n",
     "\n",
     "# save_lunar_model_onnx(target_q, \"trained_networks_lunar_lander/deep_q_network_lunar_lander\")"
    ]
