--- a/01_deep_q_learning.ipynb
+++ b/01_deep_q_learning.ipynb
@@ -289,9 +289,7 @@
     "        self.t = 0  # step counter\n",
     "\n",
     "    def step(self) -> float:\n",
-    "        eps = self.eps_end + (self.eps_start - self.eps_end) * math.exp(\n",
-    "            -self.t / self.decay\n",
-    "        )\n",
+    "        eps = self.eps_end + (self.eps_start - self.eps_end) * math.exp(-self.t / self.decay)\n",
     "        self.t += 1\n",
     "        return eps"
    ]
@@ -406,11 +404,7 @@
    ],
    "source": [
     "device = torch.device(\n",
-    "    \"cuda\"\n",
-    "    if torch.cuda.is_available()\n",
-    "    else \"mps\"\n",
-    "    if torch.backends.mps.is_available()\n",
-    "    else \"cpu\"\n",
+    "    \"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
     ")\n",
     "print(\"Using device: \", device)"
    ]
@@ -535,9 +529,7 @@
     "\n",
     "    if non_final_next_states.numel() > 0:\n",
     "        with torch.inference_mode():\n",
-    "            max_next_q = (\n",
-    "                target_q_net(non_final_next_states).max(dim=1).values\n",
-    "            )  # (num_non_final,)\n",
+    "            max_next_q = target_q_net(non_final_next_states).max(dim=1).values  # (num_non_final,)\n",
     "        next_state_values[non_final_mask] = max_next_q\n",
     "\n",
     "    targets = rewards + gamma * (1.0 - dones) * next_state_values\n",
@@ -583,9 +575,7 @@
     "\n",
     "def sample_replay_buffer_for_training(\n",
     "    replay_buffer, training_config: DQNTrainingConfig, device: torch.device\n",
-    ") -> Tuple[\n",
-    "    torch.Tensor, torch.Tensor, torch.Tensor, torch.Tensor, torch.Tensor, torch.Tensor\n",
-    "]:\n",
+    ") -> Tuple[torch.Tensor, torch.Tensor, torch.Tensor, torch.Tensor, torch.Tensor, torch.Tensor]:\n",
     "    \"\"\"\n",
     "    Sample a batch from `replay_buffer` and convert to tensors for DQN training.\n",
     "\n",
@@ -624,9 +614,7 @@
     "    else:\n",
     "        # Safe placeholder (won’t be indexed when mask is all False)\n",
     "        state_dim = states_t.shape[1:]\n",
-    "        non_final_next_states_t = torch.empty(\n",
-    "            (0, *state_dim), dtype=torch.float32, device=device\n",
-    "        )\n",
+    "        non_final_next_states_t = torch.empty((0, *state_dim), dtype=torch.float32, device=device)\n",
     "\n",
     "    return (\n",
     "        states_t,\n",
@@ -698,9 +686,7 @@
     "    loss.backward()\n",
     "\n",
     "    if training_config.grad_clip_norm is not None:\n",
-    "        nn.utils.clip_grad_norm_(\n",
-    "            online_q.parameters(), max_norm=training_config.grad_clip_norm\n",
-    "        )\n",
+    "        nn.utils.clip_grad_norm_(online_q.parameters(), max_norm=training_config.grad_clip_norm)\n",
     "\n",
     "    optimizer.step()\n",
     "    soft_update(target_q, online_q, training_config.tau)\n",
@@ -751,9 +737,7 @@
     "                state=np.asarray(obs, dtype=np.float32),\n",
     "                action=int(action),\n",
     "                reward=float(reward),\n",
-    "                next_state=(\n",
-    "                    np.asarray(next_obs, dtype=np.float32) if not done else None\n",
-    "                ),\n",
+    "                next_state=(np.asarray(next_obs, dtype=np.float32) if not done else None),\n",
     "                done=done,\n",
     "            )\n",
     "\n",
@@ -833,9 +817,7 @@
     "\n",
     "    env.close()\n",
     "    mean_r = total / training_config.eval_episodes\n",
-    "    print(\n",
-    "        f\"[Eval] mean return over {training_config.eval_episodes} episodes: {mean_r:.2f}\"\n",
-    "    )\n",
+    "    print(f\"[Eval] mean return over {training_config.eval_episodes} episodes: {mean_r:.2f}\")\n",
     "    return mean_r"
    ]
   },
@@ -987,9 +969,7 @@
     "# We will save target_q network as that is what we were training indirectly\n",
     "save_model_pytorch(target_q, \"trained_networks_lunar_lander/deep_q_network_lunar_lander\")\n",
     "\n",
-    "save_lunar_model_onnx(\n",
-    "    target_q, \"trained_networks_lunar_lander/deep_q_network_lunar_lander\"\n",
-    ")"
+    "save_lunar_model_onnx(target_q, \"trained_networks_lunar_lander/deep_q_network_lunar_lander\")"
    ]
   }
  ],
