--- a/0a_q_learning.ipynb
+++ b/0a_q_learning.ipynb
@@ -121,7 +121,9 @@
    "outputs": [],
    "source": [
     "class QLearningAgent:\n",
-    "    def __init__(self, state_shape, learning_rate=0.1, discount_factor=0.9, exploration_rate=0.1):\n",
+    "    def __init__(\n",
+    "        self, state_shape, learning_rate=0.1, discount_factor=0.9, exploration_rate=0.1\n",
+    "    ):\n",
     "        # Q[row, col, action] = value of taking that action in that state\n",
     "        self.q_table = np.zeros(state_shape + (4,))  # 4 actions\n",
     "        self.learning_rate = learning_rate  # α\n",
@@ -137,7 +139,6 @@
     "    def update_q_value(self, state, action, reward, next_state, done):\n",
     "        \"\"\"\n",
     "        Tabular Q-learning update:\n",
-    "        Q(s,a) ← Q(s,a) + α [ r + γ max_a' Q(s',a') - Q(s,a) ]\n",
     "        If next_state is terminal, we use just r as the target.\n",
     "        \"\"\"\n",
     "        current_q = self.q_table[state][action]\n",
@@ -148,7 +149,9 @@
     "            max_future_q = np.max(self.q_table[next_state])\n",
     "            target = reward + self.discount_factor * max_future_q\n",
     "\n",
-    "        self.q_table[state][action] = current_q + self.learning_rate * (target - current_q)"
+    "        self.q_table[state][action] = current_q + self.learning_rate * (\n",
+    "            target - current_q\n",
+    "        )"
    ]
   },
   {
@@ -555,7 +558,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "deep-reinforcement-learning",
    "language": "python",
    "name": "python3"
   },
@@ -569,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.1"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
