--- a/src/q-learning/q_learning.ipynb
+++ b/src/q-learning/q_learning.ipynb
@@ -558,7 +558,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deep-reinforcement-learning",
+   "display_name": "reinforcement-learning",
    "language": "python",
    "name": "python3"
   },
