--- a/src/q-learning/q_learning_2x3_world.ipynb
+++ b/src/q-learning/q_learning_2x3_world.ipynb
@@ -491,7 +491,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deep-reinforcement-learning",
+   "display_name": "reinforcement-learning",
    "language": "python",
    "name": "python3"
   },
