added documentation to q learning

--- a/src/q-learning/q_learning.ipynb
+++ b/src/q-learning/q_learning.ipynb
@@ -1,10 +1,41 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "id": "133b88ca",
    "metadata": {},
+   "source": [
+    "# Q Learning\n",
+    "\n",
+    "This notebook is part of **[Edreate.com’s Deep Reinforcement Learning Course](https://edreate.com/courses/deep-reinforcement-learning/)**.  \n",
+    "Here you’ll find the **codebase** used in the lessons.\n",
+    "<p align=\"left\">\n",
+    "  <a href=\"https://edreate.com/courses/deep-reinforcement-learning/\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/edreate/Brand-Identity-Media/main/Logo/RGB/Logo/SVG/EdReate_Logo.svg\" alt=\"EdReate Logo\" width=\"100\"/>\n",
+    "  </a>\n",
+    "</p>\n",
+    "\n",
+    "👉 For the **full learning experience** with in-depth writeups, mathematical formulas, video explanations, and structured chapters, visit the course page:\n",
+    "\n",
+    "🔗 [https://edreate.com/courses/deep-reinforcement-learning/](https://edreate.com/courses/deep-reinforcement-learning/)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Related Chapters\n",
+    "\n",
+    "- [Q-Learning: Model-Free Off-Policy Learning](https://www.edreate.com/courses/deep-reinforcement-learning/q-learning/q-learning-model-free-off-policy-learning/)  \n",
+    "- [Q-Learning Python Implementation](https://www.edreate.com/courses/deep-reinforcement-learning/q-learning/q-learning-python-implementation/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0d54dc3",
+   "metadata": {
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
    "outputs": [],
    "source": [
     "import random\n",
