--- a/src/q-learning/q_learning_2x3_simple_world.ipynb
+++ b/src/q-learning/q_learning_2x3_simple_world.ipynb
@@ -1,9 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3f6435e5",
+   "metadata": {},
+   "source": [
+    "# Q Learning\n",
+    "\n",
+    "This notebook is part of **[Edreate.com’s Deep Reinforcement Learning Course](https://edreate.com/courses/deep-reinforcement-learning/)**.  \n",
+    "Here you’ll find the **codebase** used in the lessons.\n",
+    "<p align=\"left\">\n",
+    "  <a href=\"https://edreate.com/courses/deep-reinforcement-learning/\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/edreate/Brand-Identity-Media/main/Logo/RGB/Logo/SVG/EdReate_Logo.svg\" alt=\"EdReate Logo\" width=\"100\"/>\n",
+    "  </a>\n",
+    "</p>\n",
+    "\n",
+    "👉 For the **full learning experience** with in-depth writeups, mathematical formulas, video explanations, and structured chapters, visit the course page:\n",
+    "\n",
+    "🔗 [https://edreate.com/courses/deep-reinforcement-learning/](https://edreate.com/courses/deep-reinforcement-learning/)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Related Chapters\n",
+    "\n",
+    "- [Q-Learning: Model-Free Off-Policy Learning](https://www.edreate.com/courses/deep-reinforcement-learning/q-learning/q-learning-model-free-off-policy-learning/)  \n",
+    "- [Q-Learning Python Implementation](https://www.edreate.com/courses/deep-reinforcement-learning/q-learning/q-learning-python-implementation/)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 674,
-   "id": "e8c02714",
+   "execution_count": null,
+   "id": "74e9b410",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +51,14 @@
     "SEED = 212\n",
     "random.seed(SEED)\n",
     "np.random.seed(SEED)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a01159ab",
+   "metadata": {},
+   "source": [
+    "## 1. Environment Setup"
    ]
   },
   {
@@ -83,6 +118,14 @@
     "        r = float(self.grid[self.state])\n",
     "        done = self.is_terminal(self.state)\n",
     "        return self.state, r, done"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a72d3194",
+   "metadata": {},
+   "source": [
+    "## 2. Q-Learning Agent"
    ]
   },
   {
@@ -158,6 +201,14 @@
     "                print(f\"{state_label} | \" + \" | \".join(values))\n",
     "\n",
     "        print(\"=\" * len(header))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c27f5185",
+   "metadata": {},
+   "source": [
+    "## 3. Utility Functions for visualization"
    ]
   },
   {
@@ -247,6 +298,14 @@
     "\n",
     "    print(\"Greedy path:\", \" -> \".join(fmt(p) for p in path))\n",
     "    print(\"Final reward:\", last_r, \"| done:\", done)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3019431f",
+   "metadata": {},
+   "source": [
+    "## 4. Initialization and Training"
    ]
   },
   {
