recorded with this code for dqn

--- a/src/q-learning/q_learning_2x3_simple_world.ipynb
+++ b/src/q-learning/q_learning_2x3_simple_world.ipynb
@@ -268,7 +268,7 @@
     "\n",
     "    plt.title(\"GridWorld 2x3\" + (\" (policy)\" if agent is not None else \"\"))\n",
     "    plt.savefig(\"2x3_grid_world.png\", dpi=600)\n",
-    "    plt.show()\n"
+    "    plt.show()"
    ]
   },
   {
